// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`builders flow createTypeAnnotationBasedOnTypeof function 1`] = `
Object {
  "id": Object {
    "name": "Function",
    "type": "Identifier",
  },
  "type": "GenericTypeAnnotation",
  "typeParameters": null,
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof number 1`] = `
Object {
  "type": "NumberTypeAnnotation",
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof object 1`] = `
Object {
  "id": Object {
    "name": "Object",
    "type": "Identifier",
  },
  "type": "GenericTypeAnnotation",
  "typeParameters": null,
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof string 1`] = `
Object {
  "type": "StringTypeAnnotation",
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof symbol 1`] = `
Object {
  "id": Object {
    "name": "Symbol",
    "type": "Identifier",
  },
  "type": "GenericTypeAnnotation",
  "typeParameters": null,
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof true 1`] = `
Object {
  "type": "BooleanTypeAnnotation",
}
`;

exports[`builders flow createTypeAnnotationBasedOnTypeof undefined 1`] = `
Object {
  "type": "VoidTypeAnnotation",
}
`;
